istioinaction/ch5/catalog-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: catalog-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "catalog.istioinaction.io"
