istioinaction/ch5/catalog-vs-v1.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: catalog-vs-from-gw
spec:
  hosts:
    - "catalog.istioinaction.io"
  gateways:
    - catalog-gateway
  http:
    - route:
        - destination:
            host: catalog
            subset: v1
