istioinaction/ch5/catalog-vs-v2-request.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: catalog-vs-from-gw
spec:
  hosts:
    - "catalog.istioinaction.io"
  gateways:
    - catalog-gateway
  http:
    - match:
        - headers:
            x-istio-cohort:
              exact: "internal"
      route:
        - destination:
            host: catalog
            subset: v2
    - route:
        - destination:
            host: catalog
            subset: v1
